add title splash, mouse controlled portal, basic game flow

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+        <link rel="icon" type="image/png" href="favicon.png">
         <title>Engage</title>
 
         <style type="text/css" media="screen">
@@ -15,6 +16,10 @@
                 color: white;
                 font-family: sans-serif;
                 font-size: 60%;
+            }
+            body {
+                background: no-repeat url("./images/background.png");
+                background-size: cover;
             }
             canvas { position: absolute; z-index: 50; }
         </style>
@@ -29,10 +34,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.1/fetch.min.js"></script>
 
         <!-- first party -->
+        <script src="js/config.js"></script>
         <script src="js/states/boot.js"></script>
         <script src="js/states/play.js"></script>
         <script src="js/states/preload.js"></script>
         <script src="js/states/splash.js"></script>
+        <script src="js/day.js"></script>
         <script src="js/game.js"></script>
         <script src="js/main.js"></script>
     </body>
