--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
                 left: 50%;
                 transform: translate(-50%, -50%);
                 z-index: 50;
-                border: 1px dotted lightblue;
+                border: 1px dotted rgba(255, 255, 255, 0.2);
             }
         </style>
     </head>
@@ -47,5 +47,6 @@
         <script src="js/day.js"></script>
         <script src="js/game.js"></script>
         <script src="js/main.js"></script>
+
     </body>
 </html>
