use black background

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
                 font-size: 60%;
             }
             body {
-                background: no-repeat url("./images/background.png");
+                /* background: no-repeat url("./images/background.png"); */
+                background: #000;
                 background-size: cover;
             }
             canvas {
