--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
 
         <!-- first party -->
         <script src="js/config.js"></script>
+        <script src="js/util.js"></script>
         <script src="js/states/boot.js"></script>
         <script src="js/states/preload.js"></script>
         <script src="js/states/splash.js"></script>
