--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
         <script src="js/states/play.js"></script>
         <script src="js/leap.js"></script>
         <script src="js/day.js"></script>
+        <script src="js/animations.js"></script>
         <script src="js/game.js"></script>
         <script src="js/main.js"></script>
 
