partially implemented perspective shader

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
     <body>
 
         <!-- third party -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.6.2/phaser.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.6.2/phaser.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.0.5/es6-promise.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.1/fetch.min.js"></script>
         <script src="js/leapjs/leap-0.6.4.js"></script>
