allow starting game by hovering over logo with mouse

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
                 z-index: 50;
             }
             .splash-logo {
+                pointer-events: none;
                 height: 50%;
                 position: absolute;
                 z-index: 100;
