--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,18 @@
         <title>Engage</title>
 
         <style type="text/css" media="screen">
+            @keyframes spin {
+                0% {
+                    transform: rotate(0deg);
+                }
+                100% {
+                    transform: rotate(360deg);
+                }
+            }
+            #Portal_rings {
+                animation: spin 30s infinite linear;
+                transform-origin: 50% 50%;
+            }
             * {
                 user-select: none;
                 cursor: ew-resize;
@@ -205,7 +217,9 @@
                                                 </svg>
 
             <div class="description">
-                <p> When the zero-day hits, when your phone rings at 3:00 AM, when you're at your wit's end...  </p>
+                <p> When the zero-day hits...<br>
+                    When your phone rings at 3:00 AM...<br>
+                    When you're at your wit's end...  </p>
                 <p> The Customer Portal is here for you.  Engage with it.</p>
             </div>
         </div>
