don't compile third party js

--- a/src/index.html
+++ b/src/index.html
@@ -228,10 +228,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.6.2/phaser.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.0.5/es6-promise.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.1/fetch.min.js"></script>
-        <script src="js/lib/phaser-state-transition-plugin.min.js"></script>
-        <script src="js/leapjs/leap-0.6.4.js"></script>
-        <script src="js/leapjs/leap-plugins-0.1.11.js"></script>
-        <script src="js/leapjs/leap-plugins-0.1.11-utils.js"></script>
+        <script src="lib/phaser-state-transition-plugin.min.js"></script>
+        <script src="lib/leapjs/leap-0.6.4.js"></script>
+        <script src="lib/leapjs/leap-plugins-0.1.11.js"></script>
+        <script src="lib/leapjs/leap-plugins-0.1.11-utils.js"></script>
 
         <!-- first party -->
         <script src="js/config.js"></script>
