--- a/src/index.html
+++ b/src/index.html
@@ -136,6 +136,7 @@
         <script src="js/states/boot.js"></script>
         <script src="js/states/preload.js"></script>
         <script src="js/states/splash.js"></script>
+        <script src="js/states/intro.js"></script>
         <script src="js/states/play.js"></script>
         <script src="js/leap.js"></script>
         <script src="js/day.js"></script>
