--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,9 @@
         <link rel="icon" type="image/png" href="favicon.png">
         <title>Engage</title>
 
+        <link rel="stylesheet" href="http://overpass-30e2.kxcdn.com/overpass-mono.css">
+
         <style type="text/css" media="screen">
-            @font-face {
-                font-family: 'Overpass Mono';
-                font-style: normal;
-                font-weight: 400;
-                src: local('Overpass Mono Regular'), local('OverpassMono-Regular'), url(fonts/overpass-mono/overpass-mono-regular.otf) format('otf');
-                unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-            }
             @keyframes spin {
                 0% {
                     transform: translate(-50%, -50%) rotate(0deg);
@@ -34,7 +29,7 @@
                 width: 100%;
                 overflow: hidden;
                 color: white;
-                font-family: 'Overpass Mono', sans-serif;
+                font-family: 'overpass-mono', sans-serif;
             }
             body {
                 /* background: no-repeat url("./images/background.png"); */
