alternate logo ring rotation

--- a/src/index.html
+++ b/src/index.html
@@ -91,10 +91,12 @@
             .splash .splash-logo .ring-outer {
                 /* outline: 1px dotted grey; */
                 animation: spin 20s infinite ease-in-out;
+                animation-direction: alternate;
                 /* transform-origin: 50% 50%; */
             }
             .splash .splash-logo .ring-inner {
                 animation: spin 30s infinite ease-in-out;
+                animation-direction: alternate;
                 /* transform-origin: 50% 50%; */
             }
         </style>
