add customer portal logo to splash

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,8 @@
                 height: 0px;
                 overflow: visible;
                 width: 100%;
-                transform: translateX(-50%);
+                transform: translateX(-40%);
+                top: 40px;
                 left: 50%;
                 z-index: 200;
             }
@@ -63,7 +64,7 @@
                 position: absolute;
                 z-index: 100;
                 left: 50%;
-                top: 35%;
+                top: 50%;
                 transform: translate(-50%, -50%) scale(0.65); /* can't figure out how to scale the three logo images yet */
                 transition: opacity linear 0.35s, transform linear 0.36s;
                 overflow: visible;
@@ -110,10 +111,7 @@
             </div>
 
             <div class="description">
-                <p> When the zero-day hits...<br>
-                    When your phone rings at 3:00 AM...<br>
-                    When you're at your wit's end...  </p>
-                <p> The Customer Portal is here for you.  Engage with it.</p>
+                <img src="images/cp-logo.png">
             </div>
         </div>
 
