Hide leaderboard titles

--- a/src/leaderboard/leaderboard.html
+++ b/src/leaderboard/leaderboard.html
@@ -1,11 +1,11 @@
 <article class="table">
   <section class="table-cell">
     <h1 class="leaders-header"></h1>
-    <ul class="leader-titles">
+    <ul class="leader-titles" hidden>
       <li>
         <span class="rank">Rank</span>
         <span class="username">Leaders</span>
-        <span class="score">Score</span>
+        <span class="score">Top Scores</span>
       </li>
     </ul>
     <ul class="leaders fade">
