--- a/src/leaderboard/leaderboard.html
+++ b/src/leaderboard/leaderboard.html
@@ -10,31 +10,10 @@
     </ul>
     <ul class="leaders fade">
       <li ng-repeat="leader in vm.leaders">
-        <span class="rank">{{::$index + 1 | ordinal}}</span>
+        <span class="rank">{{::$index + 1}}</span>
         <span class="username">{{::leader.name}}</span>
         <span class="score">{{::leader.score}}</span>
       </li>
     </ul>
   </section>
 </article>
-
-
-
-
-<!-- <table>
-    <thead>
-        <tr>
-            <th>Rank</th>
-            <th>Username</th>
-            <th class="score">Score</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr ng-repeat="leader in vm.leaders">
-            <td>{{::$index + 1 | ordinal}}</td>
-            <td>{{::leader.gamerID}}</td>
-            <td class="score">{{::leader.ping.hiscore}}</td>
-        </tr>
-    </tbody>
-</table> -->
- <!-- ng-style="{'color': leader.ping.color}" -->
