--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
         <link rel="icon" type="image/png" href="favicon.png">
         <title>Engage</title>
 
-        <link rel="stylesheet" href="http://overpass-30e2.kxcdn.com/overpass-mono.css">
-        <link rel="stylesheet" href="leaderboard/stylesheets/sass/animations.css">
+        <link rel="stylesheet" href="css/overpass-mono.css">
+        <link rel="stylesheet" href="css/animations.css">
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
