Update overpass font and add leaderboard change place animation

--- a/src/leaderboard/index.html
+++ b/src/leaderboard/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
       <link href="stylesheets/sass/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+      <link rel="stylesheet" href="../fonts/overpass/overpass.css">
     </head>
 
     <body ng-app="leaderboard">
