Finished email notifications and sanitize inputs

--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,7 @@
         <script src="lib/leapjs/leap-0.6.4.js"></script>
         <script src="lib/leapjs/leap-plugins-0.1.11.js"></script>
         <script src="lib/leapjs/leap-plugins-0.1.11-utils.js"></script>
+        <script src="lib/validator.min.js"></script>
 
         <!-- first party -->
         <script src="js/config.js"></script>
