changed wording on email form to include bump notifications

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
                     <input placeholder="Nickname" id="nick" type="text">
                 </label>
                 <label>
-                    <b>Email address</b> (to arrange prize delivery if you win)<br>
+                    <b>Email address</b> (to receive bump notifications or prize if you win)<br>
                     <input placeholder="Email address" id="email" type="text">
                 </label>
                 <label>
