--- a/src/index.html
+++ b/src/index.html
@@ -54,10 +54,10 @@
         <div id='stars-3'></div>
 
         <!-- third party -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.6.2/phaser.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.0.5/es6-promise.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.1/fetch.min.js"></script>
+        <script src="lib/lodash.min.js"></script>
+        <script src="lib/phaser.min.js"></script>
+        <script src="lib/es6-promise.min.js"></script>
+        <script src="lib/fetch.min.js"></script>
         <script src="lib/phaser-state-transition-plugin.min.js"></script>
         <script src="lib/leapjs/leap-0.6.4.js"></script>
         <script src="lib/leapjs/leap-plugins-0.1.11.js"></script>
