#21 added socket.io to client

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -63,6 +63,7 @@
         <script src="lib/leapjs/leap-plugins-0.1.11.js"></script>
         <script src="lib/leapjs/leap-plugins-0.1.11-utils.js"></script>
         <script src="lib/validator.min.js"></script>
+        <script src="lib/socket.io.js"></script>
 
         <!-- first party -->
         <script src="js/config.js"></script>
@@ -78,6 +79,5 @@
         <script src="js/animations.js"></script>
         <script src="js/game.js"></script>
         <script src="js/main.js"></script>
-
     </body>
 </html>
