Fixes #23 full end-to-end printing complete

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -74,6 +74,7 @@
         <script src="js/states/intro.js"></script>
         <script src="js/states/play.js"></script>
         <script src="js/states/winner.js"></script>
+        <script src="js/states/victory.js"></script>
         <script src="js/leap.js"></script>
         <script src="js/day.js"></script>
         <script src="js/animations.js"></script>
