added width to logo img tag

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -14,7 +14,7 @@
 
         <div class="splash hidden">
             <div class="splash-logo">
-                <img class="logo-text" src="images/logo.png">
+                <img class="logo-text" src="images/logo.png" width="1600">
                 <img class="ring-inner" src="images/logo-ring-inner.png">
                 <img class="ring-outer" src="images/logo-ring-outer.png">
             </div>
