--- a/src/client/index.html
+++ b/src/client/index.html
@@ -15,8 +15,10 @@
         <div class="splash hidden">
             <div class="splash-logo">
                 <img class="logo-text" src="images/logo.png" width="1800">
-                <img class="ring-inner" src="images/logo-ring-inner.png">
-                <img class="ring-outer" src="images/logo-ring-outer.png">
+                <img class="spin-ring spin-planet" src="images/spin-planet.png">
+                <img class="spin-ring spin-ring1" src="images/spin-ring1.png">
+                <img class="spin-ring spin-ring2" src="images/spin-ring2.png">
+                <img class="spin-ring spin-ring3" src="images/spin-ring3.png">
             </div>
 
             <div class="description">
