--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,6 +6,7 @@
         <link rel="icon" type="image/png" href="favicon.png">
         <title>Engage</title>
 
+        <link rel="stylesheet" href="css/overpass.css">
         <link rel="stylesheet" href="css/overpass-mono.css">
         <link rel="stylesheet" href="css/animations.css">
         <link rel="stylesheet" href="css/styles.css">
