--- a/src/client/index.html
+++ b/src/client/index.html
@@ -76,6 +76,7 @@
         <script src="lib/socket.io.js"></script>
         <script src="leaderboard/lib/angular/angular.min.js"></script>
         <script src="leaderboard/lib/angularjs-ordinal-filter/ordinal-browser.js"></script>
+        <script src="lib/numeral.min.js"></script>
 
         <!-- first party -->
         <script src="js/config.js"></script>
